Changelog
=========

2.1 (xx.xx.xxxx) - IN DEVELOPMENT
~~~~~~~~~~~~~~~~

 * Add `HelpPanel` to add HTML within an edit form (Keving Chung)
 * Added API endpoint for finding pages by HTML path (Karl Hobley)
 * Persist tab hash in URL to allow direct navigation to tabs in the admin interface (Ben Weatherman)
 * Animate the chevron icon when opening sub-menus in the admin (Carlo Ascani)
 * Look through the target link and target page slug (in addition to the old slug) when searching for redirects in the admin (Michael Harrison)
 * Remove support for IE6 to IE9 from project template (Samir Shah)
 * Remove outdated X-UA-Compatible meta from admin template  (Thibaud Colas)
 * Add JavaScript source maps in production build for packaged Wagtail (Thibaud Colas)
 * Removed `assert` statements from Wagtail API (Kim Chee Leong)
 * Update `jquery-datetimepicker` dependency to make Wagtail more CSP-friendly (`unsafe-eval`) (Mike Kamermans)
 * Added error notification when running the `wagtail` command on Python <3.4 (Matt Westcott)
 * `update_index` management command now accepts a `--chunk_size` option to determine the number of items to load at once (Dave Bell)
 * Added hook `register_account_menu_item` to add new account preference items (Michael van Tellingen)
 * Added change email functionality from the account settings (Alejandro Garza, Alexs Mathilda)
 * Add request parameter to edit handlers (Rajeev J Sebastian)
 * ImageChooser now sets a default title based on filename (Coen van der Kamp)
 * Added error handling to the Draftail editor (Thibaud Colas)
 * Add new `wagtail_icon` template tag to facilitate making admin icons accessible (Sander Tuit)
 * Set `ALLOWED_HOSTS` in the project template to allow any host in development (Tom Dyson)
 * Expose reusable client-side code to build Draftail extensions (Thibaud Colas)
 * Added `WAGTAILFRONTENDCACHE_LANGUAGES` setting to specify the languages whose URLs are to be purged when using `i18n_patterns` (PyMan Claudio Marinozzi)